<resources>
    <string name="app_name">RentmyBoat</string>
    <string name="login">Login</string>
    <string name="sign">Sign In</string>
    <string name="background">background</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <!-- Strings used for fragments for navigation -->
    <string name="address">Address</string>
    <string name="Myboats_btn">Myboats</string>
    <string name="Edit_btn">Edit</string>
    <string name="Save_btn">Save</string>
    <string name="Avatar">Avatar</string>
    <string name="edit_Name">Name</string>
    <string name="edit_Address">Address</string>
    <string name="Logout_btn">Logout</string>
    <string name="edit_Bank">Bankdetails</string>
    <string name="ImagephotoGallery">Photo</string>
    <string name="description">Description</string>
    <string name="capacity">Capacity</string>
    <string name="price">Price</string>
    <string name="cancel">Cancel</string>
    <string name="saved">Save</string>
    <string name="logout">Logout</string>
    <string name="boatImage">BoatImage</string>

</resources>